kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      containers:
      - image: ghcr.io/loki-afro/spring-petclinic:latest
        name: spring-petclinic
        ports:
        - containerPort: 8080
